--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcsh 'Hawthorne, Nathaniel, 1804-1864'
 - !lcsh 'Novelists, American -- 19th century -- Biography'
 - !lcc 'PS'
+- GITenberg
 title: 'The Complete Works of Nathaniel Hawthorne, Appendix to Volume XII: Tales,
   Sketches, and other Papers by Nathaniel Hawthorne with a Biographical Sketch by
   George Parsons Lathrop
